[build-system]
requires = ["setuptools>=68,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aysal-scan"
version = "1.0.2"
description = "Scan git repos for leaked secrets and estimate their blast radius"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Neeraj Mudunuru" },
]

dependencies = [
    "typer>=0.12.0,<1.0.0",
    "rich>=13.7.0,<15.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "gitpython>=3.1.40,<4.0.0",
    "boto3>=1.34.0,<2.0.0",
]

[project.optional-dependencies]
ui = [
    "questionary>=2.0.0,<3.0.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "respx>=0.21.0,<1.0.0",
]

[project.scripts]
aysal-scan = "aysal_scan.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aysal_scan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=aysal_scan --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["aysal_scan"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "except ImportError",
    "pass",
]

[project.urls]
Homepage = "https://github.com/Rolex-1905/aysal-scan"
Repository = "https://github.com/Rolex-1905/aysal-scan"
LinkedIn = "https://www.linkedin.com/in/neeraj-mudunuru-79130a29a/"